# openvals

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  test_benchmark.py  test_ollama.py
.github/workflows/: publish.yml
examples/: benchmark_config.yaml  conversational_eval.json  debug_model.py  reasoning_eval.json  run_benchmark.py  run_eval.py  sample_eval.json
openvals/: __init__.py  cli.py
openvals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
openvals/benchmarking/: benchmark.py  comparator.py  normalization.py  ranking.py
openvals/core/: evaluator.py
openvals/datasets/: loader.py
openvals/metrics/: accuracy.py  consistency.py  format.py  latency.py  reliability.py  safety.py  semantic.py  variance.py  verbosity.py
openvals/models/: base.py  dummy_model.py  ollama_model.py  openai_model.py
openvals/recommendation/: engine.py  profiles.py
openvals/reporting/: html_report.py
openvals/scoring/: drs.py  weighted.py
