[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openvals"
version = "0.0.4"
description = "Open evaluation and benchmarking framework for AI systems"
readme = "README.md"
authors = [
    { name = "Vishwanath Akuthota" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.scripts]
openvals = "openvals.cli:main"