[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvals"
version = "0.1.0"
description = "AI evaluation, validation, benchmarking, security Recommendation Engine"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Vishwanath Akuthota" }
]

keywords = [
    "ai",
    "llm",
    "evaluation",
    "benchmarking",
    "validation",
    "ml",
    "security"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0"
]

[project.urls]
Homepage = "https://github.com/vishwanathakuthota/openvals"
Documentation = "https://docs.openvalidations.com"
Source = "https://github.com/vishwanathakuthota/openvals"

[project.scripts]
openvals = "openvals.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvals*"]

