[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvals"
version = "0.1.0"
description = "Open source AI evaluation, validation, benchmarking, security recommendation Engine and trust layer for LLMs (OpenAI, Claude, Ollama, Gemini)" 
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Vishwanath Akuthota" }
]

keywords = [
    "AI evaluation",
    "LLM benchmarking",
    "model validation",
    "AI safety",
    "AI reliability",
    "LLM testing",
    "AI metrics",
    "machine learning evaluation",
    "AI benchmarking tools",
    "OpenAI evaluation",
    "Ollama benchmarking",
    "Claude evaluation",
    "Gemini AI testing",
    "Vishwanath Akuthota"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing :: AI Testing :: AI Development :: AI Quality",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0"
]

[project.urls]
Homepage = "https://github.com/vishwanathakuthota/openvals"
Documentation = "https://docs.openvalidations.com"
Source = "https://github.com/vishwanathakuthota/openvals"

[project.scripts]
openvals = "openvals.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvals*"]

